--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   path:
   provider: ^3.0.0+1
   pedantic: ^1.9.2
-  cupertino_icons: ^1.0.1
+  cupertino_icons: 1.0.0
 
 dev_dependencies:
   flutter_test:
