--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,15 @@ dependencies:
   built_collection: ^4.3.2
   redux: ^4.0.0+3
   flutter_redux: ^0.7.0
+  freezed_annotation: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
   built_value_generator: ^7.1.0
+  freezed: any
+  analyzer: any
 
 flutter:
   uses-material-design: true
