--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,13 @@ dependencies:
   assets_audio_player:
   built_value: ^7.0.1
   built_collection: ^4.3.2
+  flutter_swiper: ^1.1.6
   redux: ^4.0.0+3
   flutter_redux: ^0.7.0
   freezed_annotation: ^0.12.0
+
+  redux_epics: ^0.14.0
+  rxdart: any
 
 dev_dependencies:
   flutter_test:
@@ -45,3 +49,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/background.jpg
